# NxCache

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  NxCache.cpp  NxCache.h  README.md  main.cpp  test_cpprest.cpp  vcpkg-configuration.json  vcpkg.json  winsvc.cpp  winsvc.hpp
.github/workflows/: cmake-multi-platform.yml
ubuntu/: NxCache.service  postinst  postrm  prerm
