cmake_minimum_required(VERSION 3.31)

# Enable Hot Reload for MSVC compilers if supported.
if(POLICY CMP0141)
  cmake_policy(SET CMP0141 NEW)
  set(CMAKE_MSVC_DEBUG_INFORMATION_FORMAT "$<IF:$<AND:$<C_COMPILER_ID:MSVC>,$<CXX_COMPILER_ID:MSVC>>,$<$<CONFIG:Debug,RelWithDebInfo>:EditAndContinue>,$<$<CONFIG:Debug,RelWithDebInfo>:ProgramDatabase>>")
endif()

project("NxCache" VERSION 1.0 LANGUAGES CXX)
set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")

add_executable(NxCache NxCache.cpp NxCache.h main.cpp)
set_property(TARGET NxCache PROPERTY CXX_STANDARD 20)
target_compile_definitions(NxCache PRIVATE SVCNAME="NxCache" SVCDISPLAYNAME="NxCache Service")

if(WIN32)
  target_sources(NxCache PRIVATE winsvc.cpp winsvc.hpp)
  target_compile_definitions(NxCache PRIVATE _WIN32_WINNT=0x0A00)
endif()

find_package(boost_program_options CONFIG REQUIRED)
target_link_libraries(NxCache PRIVATE Boost::program_options)

find_package(cpprestsdk CONFIG REQUIRED)
if(WIN32)
    target_link_libraries(NxCache PRIVATE cpprestsdk::cpprest cpprestsdk::cpprestsdk_zlib_internal cpprestsdk::cpprestsdk_brotli_internal)
else()
    target_link_libraries(NxCache PRIVATE cpprestsdk::cpprest cpprestsdk::cpprestsdk_zlib_internal cpprestsdk::cpprestsdk_boost_internal cpprestsdk::cpprestsdk_openssl_internal)
endif()

install(TARGETS NxCache RUNTIME DESTINATION bin)

enable_testing()
add_executable(test_cpprest test_cpprest.cpp)
set_property(TARGET test_cpprest PROPERTY CXX_STANDARD 20)
if(WIN32)
    target_link_libraries(test_cpprest PRIVATE cpprestsdk::cpprest cpprestsdk::cpprestsdk_zlib_internal cpprestsdk::cpprestsdk_brotli_internal)
else()
    target_link_libraries(test_cpprest PRIVATE cpprestsdk::cpprest cpprestsdk::cpprestsdk_zlib_internal cpprestsdk::cpprestsdk_boost_internal cpprestsdk::cpprestsdk_openssl_internal)
endif()

add_test(NAME test_cpprest COMMAND test_cpprest)

if(UNIX AND NOT APPLE)
    find_program(DPKG dpkg)
    if(DPKG)
        execute_process(COMMAND ${DPKG} --print-architecture OUTPUT_VARIABLE ARCH OUTPUT_STRIP_TRAILING_WHITESPACE)
        install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/ubuntu/NxCache.service DESTINATION lib/systemd/system)
        set(CPACK_GENERATOR "DEB")
        set(CPACK_PACKAGING_INSTALL_PREFIX "/usr")
        set(CPACK_DEBIAN_FILE_NAME "${CMAKE_PROJECT_NAME}_${CMAKE_PROJECT_VERSION}_${ARCH}.deb")
        set(CPACK_DEBIAN_PACKAGE_ARCHITECTURE "${ARCH}")
        set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Resco")
        set(CPACK_DEBIAN_PACKAGE_CONTROL_EXTRA "${CMAKE_CURRENT_SOURCE_DIR}/ubuntu/postinst;${CMAKE_CURRENT_SOURCE_DIR}/ubuntu/prerm;${CMAKE_CURRENT_SOURCE_DIR}/ubuntu/postrm")
        set(CPACK_DEBIAN_PACKAGE_CONTROL_STRICT_PERMISSION TRUE)
        set(CPACK_DEBIAN_PACKAGE_DEPENDS "libc6, libstdc++6")
        set(CPACK_DEBIAN_PACKAGE_DESCRIPTION "${CMAKE_PROJECT_NAME} is a local caching service.")
        include(CPack)
    endif()
endif()
